Hot fix for jumping through other players Added polygon wall generator Added prompt for name and push of name to server

--- a/public/style.css
+++ b/public/style.css
@@ -3,3 +3,8 @@
     margin: 0;
     height: 100%;
 }
+
+#playerName {
+    display: inline-block;
+    float: left;
+}
